# CodeBlocks-AnxietyMonitor

./: AnxietyMonitor.cbplugin  CMakeLists.txt  DEPLOYMENT.md  IMPORTANT_FIX.md  PLUGIN_INSTALLATION.md  README.md  TROUBLESHOOTING.md  build_log.txt  build_output.txt  check_version.cpp  copy_dependencies.ps1  fix_plugin.ps1  install_linux.sh  install_windows.bat  manifest.xml  mingw_build.txt  sdk_version_info.txt
All Participant Device Needs/: AnxietyMonitor.cbplugin
samples/: sample_session.csv
src/: AnxietyMonitor.cpp  AnxietyMonitor.h  AnxietyScorer.cpp  AnxietyScorer.h  CSVWriter.cpp  CSVWriter.h  DataCollector.cpp  DataCollector.h  EventHandlers.cpp  EventHandlers.h  MetricsData.h  UIComponents.cpp  UIComponents.h  manifest.xml  wx_stubs.h
tests/: unit_tests.cpp
